--- a/.env
+++ b/.env
@@ -4,3 +4,10 @@ PORT=5000
 DATABASE_URL=mongodb+srv://user-uni-manager:5pwWdZLAY6HQBfiO@cluster0.j88am2v.mongodb.net/cow-hat?retryWrites=true&w=majority&appName=Cluster0
 
 DEFAULT_ST_PASS=priyo1223
+
+BCRYPT_SALT_ROUNDS=12
+
+JWT_SECRET='anything'
+JWT_EXPIRES_IN=1d
+JWT_REFRESH_SECRET='anything2323'
+JWT_REFRESH_EXPIRES_IN=30d
